<resources>
    <string name="app_name">Eric Matelyan - School Mobile App</string>
    <string name="home_text_view">What are you looking for?</string>
    <string name="home_terms_button">Terms</string>
    <string name="home_courses_button">Courses</string>
    <string name="home_assignments_button">Assignments</string>
    <string name="save_term_button">Save</string>
    <string name="term_title">Term Title</string>
    <string name="add_term_hint">Term 1, Spring Term</string>
    <string name="menu_home">Home</string>
    <string name="start_date">Start Date</string>
    <string name="add_date_hint">Select a Date</string>
    <string name="end_date">End Date</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">menu_delete</string>
    <string name="course_title">Course Title</string>
    <string name="course_status">Status</string>
    <string name="course_inst_name">Instructor Name</string>
    <string name="course_inst_phone">Instructor Phone</string>
    <string name="course_inst_email">Instructor Email</string>
    <string name="term_details_assoc_courses_label">Courses</string>
    <string name="associated_term">Term</string>
    <string name="assignment_title">Assignment Title</string>
    <string name="assignment_type">Assignment Type</string>
    <string name="assoc_course">Course</string>
    <string name="notes">Notes</string>
    <string name="assignments">Assignments</string>
    <string name="add_notes_here">Add optional notes here</string>
    <string name="share">Share Notes</string>
    <string name="menu_notify">Create Notifications</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channel description</string>
    <string-array name="status_array">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan To Take</item>
    </string-array>
    <string-array name="assignment_types_array">
        <item>Performance Assessment</item>
        <item>Objective Assessment</item>
    </string-array>

</resources>