<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AssignmentDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/assignment_details_title_label"
            android:text="@string/assignment_title"
            style="@style/termLabel" />

        <TextView
            android:id="@+id/assignment_details_title_text"
            style="@style/termText"/>

        <TextView
            android:id="@+id/assignment_details_course_label"
            android:text="@string/assoc_course"
            style="@style/termLabel" />

        <TextView
            android:id="@+id/assignment_details_course_text"
            style="@style/termText"/>

        <TextView
            android:id="@+id/assignment_details_type_label"
            android:text="@string/assignment_type"
            style="@style/termLabel" />

        <TextView
            android:id="@+id/assignment_details_type_text"
            style="@style/termText" />

        <TextView
            android:id="@+id/assignment_details_start_label"
            android:text="@string/start_date"
            style="@style/termLabel" />

        <TextView
            android:id="@+id/assignment_details_start_text"
            style="@style/termText" />

        <TextView
            android:id="@+id/assignment_details_end_label"
            android:text="@string/end_date"
            style="@style/termLabel" />

        <TextView
            android:id="@+id/assignment_details_end_text"
            style="@style/termText" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>