<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddCourseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/course_add_title_label"
                android:text="@string/course_title"
                style="@style/courseLabel" />

            <TextView
                android:id="@+id/course_add_assoc_term_label"
                android:text="@string/associated_term"
                style="@style/courseLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/course_add_title_text"
                style="@style/courseText"/>

            <Spinner
                android:id="@+id/course_add_assoc_term_spinner"
                style="@style/courseSpinner"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/course_add_start_label"
                android:text="@string/start_date"
                style="@style/courseLabel" />

            <TextView
                android:id="@+id/course_add_end_label"
                android:text="@string/end_date"
                style="@style/courseLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/course_add_start_text"
                style="@style/addDate" />

            <TextView
                android:id="@+id/course_add_end_text"
                style="@style/addDate" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/course_add_status_label"
                android:text="@string/course_status"
                style="@style/courseLabel" />

            <TextView
                android:id="@+id/course_add_inst_name_label"
                android:text="@string/course_inst_name"
                style="@style/courseLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/course_add_status_spinner"
                style="@style/courseSpinner"/>

            <EditText
                android:id="@+id/course_add_inst_name_text"
                style="@style/courseText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/course_add_inst_phone_label"
                android:text="@string/course_inst_phone"
                style="@style/courseLabel" />

            <TextView
                android:id="@+id/course_add_inst_email_label"
                android:text="@string/course_inst_email"
                style="@style/courseLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/course_add_inst_phone_text"
                style="@style/courseText" />

            <EditText
                android:id="@+id/course_add_inst_email_text"
                style="@style/courseText" />

        </LinearLayout>

        <TextView
            android:id="@+id/course_edit_notes_label"
            android:text="@string/notes"
            style="@style/courseLabel" />

        <ScrollView
            android:layout_width="370dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/scrollview_border">

            <EditText
                android:id="@+id/course_add_notes_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/add_notes_here"
                style="@style/courseText"/>

        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/add_course_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_term_button"
        android:layout_marginBottom="10dp"
        android:onClick="edit_course_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>