<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CourseDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/course_edit_title_label"
                android:text="@string/course_title"
                style="@style/courseLabel" />

            <TextView
                android:id="@+id/course_edit_assoc_term_label"
                android:text="@string/associated_term"
                style="@style/courseLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/course_edit_title_text"
                style="@style/courseText"/>


            <TextView
                android:id="@+id/course_details_assoc_term_text"
                style="@style/courseText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/course_edit_start_label"
                android:text="@string/start_date"
                style="@style/courseLabel" />

            <TextView
                android:id="@+id/course_edit_end_label"
                android:text="@string/end_date"
                style="@style/courseLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/course_edit_start_text"
                style="@style/courseText" />

            <TextView
                android:id="@+id/course_edit_end_text"
                style="@style/courseText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/course_edit_status_label"
                android:text="@string/course_status"
                style="@style/courseLabel" />

            <TextView
                android:id="@+id/course_edit_inst_name_label"
                android:text="@string/course_inst_name"
                style="@style/courseLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/course_edit_status_text"
                style="@style/courseText" />

            <TextView
                android:id="@+id/course_edit_inst_name_text"
                style="@style/courseText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/course_edit_inst_phone_label"
                android:text="@string/course_inst_phone"
                style="@style/courseLabel" />

            <TextView
                android:id="@+id/course_edit_inst_email_label"
                android:text="@string/course_inst_email"
                style="@style/courseLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/course_edit_inst_phone_text"
                style="@style/courseText" />

            <TextView
                android:id="@+id/course_edit_inst_email_text"
                style="@style/courseText" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>