<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <TextView
        android:id="@+id/home_text_view"
        android:text="@string/home_text_view"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/home_terms_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/home_terms_button"
        android:onClick="termsButton"
        app:layout_constraintTop_toBottomOf="@id/home_text_view"
        style="@style/DefaultButton"/>

    <Button
        android:id="@+id/home_courses_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/home_courses_button"
        android:onClick="coursesButton"
        app:layout_constraintTop_toBottomOf="@id/home_terms_button"
        style="@style/DefaultButton"/>

    <Button
        android:id="@+id/home_assignments_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/home_assignments_button"
        android:onClick="assignmentsButton"
        app:layout_constraintTop_toBottomOf="@id/home_courses_button"
        style="@style/DefaultButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>