<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.EditTermActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/term_edit_title_label"
                android:text="@string/term_title"
                style="@style/termLabel" />

            <EditText
                android:id="@+id/term_edit_title_text"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                style="@style/termText"/>

            <TextView
                android:id="@+id/term_edit_start_label"
                android:text="@string/start_date"

                style="@style/termLabel" />

            <TextView
                android:id="@+id/term_edit_start_text"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                style="@style/termText" />

            <TextView
                android:id="@+id/term_edit_end_label"
                android:text="@string/end_date"
                style="@style/termLabel" />

            <TextView
                android:id="@+id/term_edit_end_text"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                style="@style/termText" />

        </LinearLayout>

    <Button
        android:id="@+id/edit_term_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_term_button"
        android:layout_marginBottom="10dp"
        android:onClick="add_term_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>