<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.TermDetailsActivity">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/term_details_title_label"
            android:text="@string/term_title"
            style="@style/itemLabel" />

        <TextView
            android:id="@+id/term_details_title_text"
            android:layout_below="@id/term_details_title_label"
            style="@style/itemEdit"/>

        <TextView
            android:id="@+id/term_details_start_label"
            android:text="@string/start_date"
            android:layout_below="@id/term_details_title_text"
            style="@style/itemLabel" />

        <TextView
            android:id="@+id/term_details_start_text"
            android:layout_below="@id/term_details_start_label"
            style="@style/itemEdit" />

        <TextView
            android:id="@+id/term_details_end_label"
            android:text="@string/end_date"
            android:layout_below="@id/term_details_start_text"
            style="@style/itemLabel" />

        <TextView
            android:id="@+id/term_details_end_text"
            android:layout_below="@id/term_details_end_label"
            style="@style/itemEdit" />

        <TextView
            android:id="@+id/term_details_assoc_courses_label"
            android:text="@string/term_details_assoc_courses_label"
            android:layout_below="@id/term_details_end_text"
            style="@style/itemLabel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/assoc_courses_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/term_details_assoc_courses_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>